// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should match the snapshot 1`] = `
<div
  className="App"
>
  <Switch>
    <Route
      exact={true}
      path="/"
      render={[Function]}
    />
    <Redirect
      to="/"
    />
    <Route
      path="/dashboard"
      render={[Function]}
    />
    <Route
      path="/instructions/:type"
      render={[Function]}
    />
    <Route
      path="/round-one"
      render={[Function]}
    />
    <Route
      path="/round-two"
      render={[Function]}
    />
    <Route
      path="/round-three"
      render={[Function]}
    />
    <Route
      component={[Function]}
    />
  </Switch>
</div>
`;

exports[`App component should match the snapshot if there is user logged 1`] = `
<div
  className="App"
>
  <Switch>
    <Route
      exact={true}
      path="/"
      render={[Function]}
    />
    <Route
      path="/dashboard"
      render={[Function]}
    />
    <Route
      path="/instructions/:type"
      render={[Function]}
    />
    <Route
      path="/round-one"
      render={[Function]}
    />
    <Route
      path="/round-two"
      render={[Function]}
    />
    <Route
      path="/round-three"
      render={[Function]}
    />
    <Route
      component={[Function]}
    />
  </Switch>
</div>
`;
